vbnc/vbnc/tests/Errors/30057.vb
Class bug
	Sub A ()
		A (1)
	End Sub
	Shared Function Main () As Integer
	End Function
End Class
